<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/eText"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/appLogo"
                android:layout_width="43dp"
                android:layout_height="33dp"
                android:layout_gravity="center"
                android:contentDescription="@string/animotrack_logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/animotrack_logo" />

            <TextView
                android:id="@+id/appName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/notificationsButton"
            android:layout_width="43dp"
            android:layout_height="33dp"
            android:layout_gravity="center"
            android:layout_marginStart="190dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/notif_icon" />

    </LinearLayout>

    <View
        android:id="@+id/rectangleView"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/rectangle_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/greetNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="45dp"
        android:text="@string/hello_name"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_layout" />

    <TextView
        android:id="@+id/greetingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="@string/greeting"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greetNameTextView" />

    <!--Categories-->
    <TextView
        android:id="@+id/categoriesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/categories"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/rectangleView" />

    <LinearLayout
        android:id="@+id/category_icons"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginTop="2dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/UpcomingEventsTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoriesTextView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <ImageButton
                android:id="@+id/orgsIconImageButton"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/orgs_category_icon"
                android:scaleType="centerCrop"
                android:src="@drawable/icon_orgs"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/orgsLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Organizations"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/orgsIconImageButton"
                app:layout_constraintVertical_bias="0.538" />

            <ImageButton
                android:id="@+id/acadsIconImageButton"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="18dp"
                android:layout_marginTop="16dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/acads_category_icon"
                android:scaleType="centerCrop"
                android:src="@drawable/icon_acads"
                app:layout_constraintStart_toEndOf="@+id/orgsIconImageButton"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/acadsLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="14dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Academics"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/orgsLabel"
                app:layout_constraintTop_toBottomOf="@+id/acadsIconImageButton"
                app:layout_constraintVertical_bias="0.533" />

            <ImageButton
                android:id="@+id/seminarIconImageButton"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginTop="16dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/seminar_category_icon"
                android:scaleType="centerCrop"
                android:src="@drawable/icon_seminar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/seminarLabel"
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Seminars"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/sportsLabel"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toEndOf="@+id/acadsLabel"
                app:layout_constraintTop_toBottomOf="@+id/seminarIconImageButton" />

            <ImageButton
                android:id="@+id/sportsIconImageButton"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/sports_category_icon"
                android:scaleType="centerCrop"
                android:src="@drawable/icon_sports"
                app:layout_constraintEnd_toStartOf="@+id/culturalIconImageButton"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/sportsLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="38dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Sports"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/culturalLabel"
                app:layout_constraintTop_toBottomOf="@+id/sportsIconImageButton"
                app:layout_constraintVertical_bias="0.538" />

            <ImageButton
                android:id="@+id/culturalIconImageButton"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="20dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/cultural_category_icon"
                android:scaleType="centerCrop"
                android:src="@drawable/icon_cultural"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/culturalLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="28dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Cultural"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/culturalIconImageButton"
                app:layout_constraintVertical_bias="0.562" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/UpcomingEventsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/upcoming_events"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/category_icons" />

    <ImageButton
        android:id="@+id/upcomingEventsExtButton"
        android:layout_width="18dp"
        android:layout_height="16dp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="190dp"
        android:layout_marginTop="185dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/right_arrow"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toEndOf="@+id/UpcomingEventsTextView"
        app:layout_constraintTop_toBottomOf="@+id/rectangleView"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewUpcomingEvents"
        android:layout_width="403dp"
        android:layout_height="330dp"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toTopOf="@id/circular_button_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UpcomingEventsTextView"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/circular_button_layout"
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:background="@color/white_ice"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp">

            <ImageButton
                android:id="@+id/homeButton"
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/home_button"
                android:scaleType="centerCrop"
                android:src="@drawable/home_vector"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/eventsButton"
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_marginStart="90dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/events_button"
                android:scaleType="centerCrop"
                android:src="@drawable/event_vector"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/bookmarksButton"
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center"
                android:layout_marginEnd="90dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/bookmarks_button"
                android:scaleType="centerCrop"
                android:src="@drawable/unshaded_bookmark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/profileButton"
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/profile_buton"
                android:scaleType="centerCrop"
                android:src="@drawable/profile_vector"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/add_event_button"
        android:layout_width="112dp"
        android:layout_height="100dp"
        android:layout_marginBottom="55dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@string/add_event"
        android:focusable="true"
        android:src="@drawable/add_event"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

