<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".UpcomingEventExtPage">

    <LinearLayout
        android:id="@+id/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/appLogo"
            android:layout_width="43dp"
            android:layout_height="33dp"
            android:layout_gravity="center"
            android:contentDescription="@string/animotrack_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/animotrack_logo" />

        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/notificationsButton"
            android:layout_width="43dp"
            android:layout_height="33dp"
            android:layout_gravity="center"
            android:layout_marginStart="190dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/notif_icon"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/navBookmark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_layout">

        <ImageButton
            android:id="@+id/back_arrow"
            android:layout_width="18dp"
            android:layout_height="16dp"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:layout_marginStart="12dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/left_arrow"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Upcoming Events"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinner_departments"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:background="@drawable/filter_icon"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:spinnerMode="dropdown"
            android:entries="@array/event_college"/>

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewUpcomingEventsExtended"
        android:layout_width="390dp"
        android:layout_height="669dp"
        android:layout_marginBottom="72dp"
        android:clipToPadding="false"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/circular_button_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navBookmark"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/circular_button_layout"
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:background="@color/white_ice"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp">

            <ImageButton
                android:id="@+id/homeButton"
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/home_button"
                android:scaleType="centerCrop"
                android:src="@drawable/home_vector"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/eventsButton"
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_marginStart="90dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/events_button"
                android:scaleType="centerCrop"
                android:src="@drawable/event_vector"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/bookmarksButton"
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center"
                android:layout_marginEnd="90dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/bookmarks_button"
                android:scaleType="centerCrop"
                android:src="@drawable/unshaded_bookmark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/profileButton"
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/profile_buton"
                android:scaleType="centerCrop"
                android:src="@drawable/profile_vector"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/my_image_button"
        android:layout_width="112dp"
        android:layout_height="100dp"
        android:layout_marginBottom="55dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@string/add_event"
        android:focusable="true"
        android:src="@drawable/add_event"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
